#############################################################################
# xguess
#
# Copyright (C) 1998-2014, David Arnold.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
#############################################################################
# Process this file with automake to produce Makefile.in

bin_PROGRAMS = \
    xguess

xguess_SOURCES = \
    osf1.c \
    osx.c \
    sunos.c \
    ultrix.c \
    xkb.c \
    main.c

man_MANS = \
    xguess.1

EXTRA_DIST = \
    $(man_MANS) \
    osf1.h \
    osx.h \
    sunos.h \
    ultrix.h \
    xkb.h


#############################################################################
